%%{init: {"theme":"base","themeVariables":{"primaryColor":"#eef2f8","primaryBorderColor":"#4a6fa5","lineColor":"#6b7280","primaryTextColor":"#1a1a1a"}} }%%
erDiagram
    ORGANIZATIONS ||--o{ ORGANIZATION_MEMBERS   : "has member"
    USERS         ||--o{ ORGANIZATION_MEMBERS   : "belongs to"
    ORGANIZATIONS ||--o{ GITHUB_INSTALLATIONS   : "installs app as"
    ORGANIZATIONS ||--o{ REPOSITORIES           : "owns"
    GITHUB_INSTALLATIONS ||--o{ REPOSITORIES    : "grants access to"
    USERS         ||--o{ SESSIONS               : "signs in with"
    USERS         ||--o{ API_KEYS               : "issues"
    ORGANIZATIONS ||--o{ SESSIONS               : "scopes"
    ORGANIZATIONS ||--o{ API_KEYS               : "scopes"
    REPOSITORIES  ||--|| REPOSITORY_SETTINGS    : "configured by"
    REPOSITORIES  ||--o{ REPOSITORY_AGENT_CONFIG : "enables"

    ORGANIZATIONS {
        uuid        id                           PK
        text        github_org_login             "unique"
        bigint      github_org_id                "unique"
        text        display_name
        numeric     default_confidence_threshold "org-wide default, 0.800"
        timestamptz created_at
    }

    USERS {
        uuid        id             PK
        bigint      github_user_id "unique"
        text        github_login
        text        email
        text        avatar_url
        timestamptz last_seen_at
    }

    ORGANIZATION_MEMBERS {
        uuid        organization_id PK, FK
        uuid        user_id         PK, FK
        enum        role            "admin or member; admin gates config writes"
        timestamptz added_at
    }

    GITHUB_INSTALLATIONS {
        uuid        id                     PK
        uuid        organization_id        FK
        bigint      github_installation_id "unique"
        text        account_login
        text        webhook_secret_ref     "secret-manager reference, never the secret"
        timestamptz suspended_at
        timestamptz installed_at
    }

    SESSIONS {
        uuid        id              PK
        uuid        user_id         FK
        uuid        organization_id FK
        bytea       token_hash      "hash only, NFR-05"
        text        user_agent
        timestamptz expires_at
        timestamptz revoked_at
    }

    API_KEYS {
        uuid        id              PK
        uuid        user_id         FK
        uuid        organization_id FK
        text        label
        text        key_prefix      "shown in the UI"
        bytea       key_hash        "hash only, secret shown once"
        timestamptz last_used_at
        timestamptz revoked_at
    }

    REPOSITORIES {
        uuid   id                     PK
        uuid   organization_id        FK
        uuid   github_installation_id FK
        bigint github_repo_id
        text   full_name
        text   default_branch
        text   primary_language
        bool   review_enabled
    }

    REPOSITORY_SETTINGS {
        uuid        repository_id                 PK, FK
        numeric     confidence_threshold_override "NULL means inherit, FR-WEB-03"
        int         agent_timeout_ms              "default 20000, NFR-02"
        bool        auto_fix_style
        bool        post_inline_comments
        uuid        updated_by                    FK
        timestamptz updated_at
    }

    REPOSITORY_AGENT_CONFIG {
        uuid        repository_id PK, FK
        enum        agent         PK "one row per agent, FR-WEB-02"
        bool        enabled
        uuid        updated_by    FK
        timestamptz updated_at
    }
